data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureVillagePieces.Start.md
---
title: "StructureVillagePieces.Start"
description: "public static class StructureVillagePieces.Start extends StructureVillagePieces.Well"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureVillagePieces.Start.html"
sourceType: javadoc
---

# StructureVillagePieces.Start

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Well → net.minecraft.world.gen.structure.StructureVillagePieces.Start

## Class signature

```java
public static class StructureVillagePieces.Start extends StructureVillagePieces.Well
```

## Constructors

- `Start()`
- `Start(WorldChunkManager p_i2104_1_, int p_i2104_2_, java.util.Random p_i2104_3_, int p_i2104_4_, int p_i2104_5_, java.util.List p_i2104_6_, int p_i2104_7_)`

## Methods

- `WorldChunkManager getWorldChunkManager()`

## Fields

- `java.util.List field_74930_j`
- `java.util.List field_74932_i`
- `boolean inDesert`
- `java.util.List structureVillageWeightedPieceList`
- `StructureVillagePieces.PieceWeight structVillagePieceWeight`
- `int terrainType`
- `WorldChunkManager worldChunkMngr`
